[Bug #18329] Fix crash when calling non-existent super method

The cme is NULL when a method does not exist, so check it before
accessing the callcache.